Naftah - concurrency support - updated add opens